--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.6.0",
     "axios": "^1.6.1",
+    "nprogress": "^0.2.0",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
     "vue-inline-svg": "^3.1.2",
@@ -18,6 +19,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
