--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.6.0",
     "axios": "^1.6.1",
+    "maska": "^2.1.10",
     "nprogress": "^0.2.0",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
