--- a/web/package.json
+++ b/web/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.6.1",
     "maska": "^2.1.10",
     "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
     "vue-inline-svg": "^3.1.2",
     "vue-router": "4",
+    "vue-toastification": "2.0.0-rc.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
