--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/extension-placeholder": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
+    "@tiptap/vue-3": "^2.1.12",
     "@vueuse/core": "^10.6.0",
     "axios": "^1.6.1",
     "maska": "^2.1.10",
@@ -19,6 +23,7 @@
     "vue-inline-svg": "^3.1.2",
     "vue-router": "4",
     "vue-toastification": "2.0.0-rc.5",
+    "vue3-popper": "^1.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
