finish document editor

--- a/web/package.json
+++ b/web/package.json
@@ -9,15 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/core": "^2.1.12",
+    "@tiptap/extension-bubble-menu": "^2.1.12",
     "@tiptap/extension-placeholder": "^2.1.12",
+    "@tiptap/extension-text-align": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "@tiptap/suggestion": "^2.1.12",
     "@tiptap/vue-3": "^2.1.12",
     "@vueuse/core": "^10.6.0",
     "axios": "^1.6.1",
     "maska": "^2.1.10",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "tippy.js": "^6.3.7",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
     "vue-inline-svg": "^3.1.2",
