--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 # *.css linguist-detectable=false
 *.sh linguist-detectable=false
-# *.ts linguist-detectable=false
+# *.vue linguist-detectable=false
 *.vue linguist-detectable=false
+# *.ts linguist-detectable=false
+*.ts linguist-detectable=false
