--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@tiptap/vue-3": "^2.1.12",
     "@vueuse/core": "^10.6.0",
     "axios": "^1.6.1",
+    "jspdf": "^2.5.1",
     "maska": "^2.1.10",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
